# rust-play

./: README.md
arc-mutex1/: Cargo.toml
arc-mutex1/src/: main.rs
command1/: Cargo.toml
command1/src/: main.rs
count/: Cargo.toml
count/src/: main  main.rs
csv-play/: Cargo.toml  person.csv
csv-play/src/: main.rs
csv_demo/: .gitignore  Cargo.toml  README.md  reviews_data_clean.csv
csv_demo/src/: date_convert.rs  lib.rs  main.rs  parse_image_links.rs
dynamo-cli/: Cargo.toml
dynamo-cli/src/: main.rs
dynamo-cli/src/arguments/: mod.rs
dynamo-cli/src/dynamo/: mod.rs
dynamo-cli/src/dynamor/: mod.rs
dynamo-cli/src/menu/: mod.rs
dynamo-cli/src/processor/: mod.rs
dynamo-cli/src/transformers/: integrations.rs  logs.rs  mapped_fields.rs  mod.rs  modules.rs  syncs.rs
dynamo-cli/src/types/: mod.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
fibonacci2/src/: main.rs
git-cli/src/: main.rs
image-resizer/: Cargo.toml
image-resizer/src/: main.rs
image_play/: Cargo.toml  README
image_play/src/: main.rs
json-swap-keys/: Cargo.toml  input.json  input.json_camelcase.json
json-swap-keys/src/: main.rs
json-to-csv/: Cargo.toml  raw.json  sync_queue.csv  test.json
json-to-csv/src/: main.rs
json-to-csv/src/csv_reader/: mod.rs
json-to-csv/src/csv_writer/: mod.rs
json-to-csv/src/json_reader/: mod.rs
json-to-csv/src/processor/: mod.rs
json-to-csv/src/types/: mod.rs
julia-image/: Cargo.toml
julia-image/src/: main.rs
lambda-api/: Cargo.toml
lambda-api/src/: main.rs
lambda-s3/: Cargo.toml  README.md  example.json
lambda-s3/src/: main.rs
maths/src/: main.rs
nanosecond/: .gitignore  Cargo.toml
nanosecond/src/: main.rs
new-lambda-project/: Cargo.toml
new-lambda-project/src/: main.rs
parse-json/: Cargo.toml  data.json
parse-json/src/: main.rs
perfect-numbers/: Cargo.toml  README.md
perfect-numbers/src/: main.rs
pixelate-image/: Cargo.toml
pixelate-image/src/: main.rs
play-with-serde/: Cargo.toml
play-with-serde/src/: main.rs
second-attempt/: Cargo.toml  README
second-attempt/src/: main.rs
snake/: Cargo.toml
snake/src/: logic.rs  main.rs
socket-app/: Cargo.toml  client.html  dockerfile  readme.md
socket-app/src/: main.rs
solar/: Cargo.toml
solar/src/: main.rs
solar/src/dynamo_db/: mod.rs
solar/src/solar_systems/: mod.rs
surrealdb-vector-example/: Cargo.toml
surrealdb-vector-example/src/: main.rs
talk-to-rds/: Cargo.toml
talk-to-rds/src/: main.rs
threading/: Cargo.toml
threading/src/: main.rs
