[package]
name = "dynamo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.6", features = ["json"] }
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.3.0"
use = "0.0.1-pre.0"
serde_dynamodb = "0.9.0"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
serde_derive = "1.0.198"
