[package]
name = "dynamo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
aws-config = "1.0.1"
serde_dynamodb = "0.9.0"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
