[package]
name = "image_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
error-chain = "0.12.4"
fast_image_resize = { version = "3.0.4" }
image = "0.25.0"
reqwest = "0.11.26"
tokio = { version = "1.36.0", features = ["full"] }

[release]
opt-level = 3
lto = true

