[package]
name = "lambda-s3"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

lambda_runtime = "0.11.1"
rusoto_s3 = "0.48.0"
serde = "1"
tokio = { version = "1", features = ["macros"] }
openssl = { version = "0.10", features = ["vendored"] }
rusoto_core = "0.48.0"
anyhow = "1.0.82"
serde_json = "1.0.116"

aws-sdk-cloudwatchlogs = "1.24.0"
# async-compression = "0.4.9"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[package.metadata.lambda.deploy]
memory = 512
tags = { "project" = "lambda-s3" }
