[package]
name = "dan_second-attempt2"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
#    let shared_config = aws_config::load_defaults(BehaviorVersion::latest()).await;the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

lambda_runtime = "0.8.3"
serde = "1.0.136"
tokio = { version = "1", features = ["macros", "full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.3.0", features = ["behavior-version-latest"] }
# rusoto_dynamodb = "0.48.0"
openssl = { version = "0.10", features = ["vendored"] }
maplit = "1.0"
axum = "0.7.4"
rand = "0.8"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
