[package]
name = "solar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.9.2"
tokio = { version = "1", features = ["macros", "full"] }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.3.0", features = ["behavior-version-latest"] }
