[package]
name = "threading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
# micro_rand = "0.0.1"
names = "0.14.0"
rand = { version = "0.8.5", featutes = ["small_rng"] }
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
